--- a/index.html
+++ b/index.html
@@ -18,12 +18,17 @@
 
             <img src="_imagens/glass-oculos-preto-peq.png" alt="Óculos">
 
-            Menu Principal
-            - Home
-            - Especificações
-            - Fotos
-            - Multimídia
-            - Fale conosco
+            <nav class="navegacao">
+                <h1>Menu Principal </h1>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="specs.html">Especificações</a></li>
+                    <li><a href="fotos.html">Fotos</a></li>
+                    <li><a href="multimidia.html">Multimídia</a></li>
+                    <li><a href="fale-conosco.html">Fale conosco</a></li>
+                </ul>
+            </nav>
+
         </header>
 
         <hgroup>
@@ -35,10 +40,13 @@
 
         <h2>O que é</h2>
         <p>
-            <strong>O Google Glass</strong> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos
+            <strong>O Google Glass</strong> é um acessório em forma de óculos que possibilita a interação dos usuários
+            com diversos conteúdos
             em realidade aumentada. Também chamado de Project Glass, o eletrônico é capaz de tirar fotos a partir de
-            comandos de voz, enviar mensagens instantâneas e realizar vídeo&shy;con&shy;ferên&shy;cias. Seu lançamento está previsto para
-            2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o Google Glass encontra-se em fase de testes e já possui
+            comandos de voz, enviar mensagens instantâneas e realizar vídeo&shy;con&shy;ferên&shy;cias. Seu lançamento
+            está previsto para
+            2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o Google Glass encontra-se em fase de testes e já
+            possui
             um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes
             anti-furto e de desbloqueio de tela para o acessório.
         </p>
@@ -53,7 +61,8 @@
 
         <h2>Data de lançamento</h2>
         <p>
-            Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível
+            Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja
+            disponível
             em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.
         </p>
 
@@ -76,8 +85,10 @@
 
         <h2>O que você pode fazer com o Google Glasses</h2>
         <p>
-            O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-humano”, já que o
-            aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o
+            O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-humano”, já que
+            o
+            aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar
+            o
             clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.
         </p>
 
@@ -91,14 +102,17 @@
         <h2>Novidades no Glass</h2>
         <p>
             O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita no
-            mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das hastes
-            dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em determinados ossos de
+            mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das
+            hastes
+            dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em determinados ossos
+            de
             sua cabeça, sem usar nenhum tipo de alto-falante.
         </p>
 
         <p>
             Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360
-            pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a 2,5
+            pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a
+            2,5
             metros de distância do espectador.
         </p>
 
