--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h2>A revolução do Google está chegando</h2>
             </hgroup>
 
-            <img src="_imagens/glass-oculos-preto-peq.png" alt="Óculos">
+            <img id="icone" src="_imagens/glass-oculos-preto-peq.png" alt="Óculos">
 
             <nav class="navegacao">
                 <h1>Menu Principal </h1>
