--- a/index.html
+++ b/index.html
@@ -21,11 +21,15 @@
             <nav class="navegacao">
                 <h1>Menu Principal </h1>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="specs.html">Especificações</a></li>
-                    <li><a href="fotos.html">Fotos</a></li>
-                    <li><a href="multimidia.html">Multimídia</a></li>
-                    <li><a href="fale-conosco.html">Fale conosco</a></li>
+                    <li onmousemove="mudaFoto('./_imagens/home.png')" onmouseout="mudaFoto('./_imagens/glass-oculos-preto-peq.png')"><a href="index.html">Home</a></li>
+
+                    <li onmousemove="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('./_imagens/glass-oculos-preto-peq.png')" ><a href="specs.html">Especificações</a></li>
+
+                    <li onmousemove="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('./_imagens/glass-oculos-preto-peq.png')"><a href="fotos.html">Fotos</a></li>
+
+                    <li onmousemove="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('./_imagens/glass-oculos-preto-peq.png')"><a href="multimidia.html">Multimídia</a></li>
+
+                    <li onmousemove="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('./_imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">Fale conosco</a></li>
                 </ul>
             </nav>
 
@@ -120,8 +124,8 @@
         </section>
 
         <aside id="lateral">
-            <h3>Outras Notícias</h3>
-            <h4>Vídeo mais recente</h4>
+            <h1>Outras Notícias</h1>
+            <h2>Vídeo mais recente</h2>
 
             [AQUI ENTRA UM VÍDEO]
 
@@ -153,6 +157,8 @@
             <a href="http://twitter.com/cursosemvideo" target="_blank">Twitter</a>
         </footer>
     </div>
+
+    <script src="./_javascript/funcoes.js"></script>
 
 </body>
 
