--- a/fotos.html
+++ b/fotos.html
@@ -1,29 +1,67 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<html lang="pt-br">
 
-[AQUI ENTRA UMA FOTO]
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tudo Sobre o Google Glass</title>
+    <link rel="stylesheet" href="/_css/estilo.css">
+</head>
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+<body>
+    <div id="interface">
+        <header id="cabecalho">
+            <hgroup>
+                <h1>Google Glass</h1>
+                <h2>A revolução do Google está chegando</h2>
+            </hgroup>
 
-Glass > Fotos
-Galeria de Imagens do Google Glass
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+            <img id="icone" src="_imagens/fotos.png" alt="Óculos">
 
-Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.
+            <nav class="navegacao">
+                <h1>Menu Principal </h1>
+                <ul>
+                    <li onmousemove="mudaFoto('./_imagens/home.png')"
+                        onmouseout="mudaFoto('./_imagens/glass-oculos-preto-peq.png')"><a href="index.html">Home</a>
+                    </li>
 
-- Agenda e lembretes
-- Sergey Brin usando o Glass
-- Leve e compacto
-- Sensação de uma tela de 50"
-- Vários tipos de lente
-- Informações importantes
+                    <li onmousemove="mudaFoto('_imagens/especificacoes.png')"
+                        onmouseout="mudaFoto('./_imagens/glass-oculos-preto-peq.png')"><a
+                            href="specs.html">Especificações</a></li>
 
-Copyright 2013 - by Gustavo Guanabara
+                    <li onmousemove="mudaFoto('_imagens/fotos.png')"
+                        onmouseout="mudaFoto('./_imagens/glass-oculos-preto-peq.png')"><a href="fotos.html">Fotos</a>
+                    </li>
 
-Facebook | Twitter
+                    <li onmousemove="mudaFoto('_imagens/multimidia.png')"
+                        onmouseout="mudaFoto('./_imagens/glass-oculos-preto-peq.png')"><a
+                            href="multimidia.html">Multimídia</a></li>
+
+                    <li onmousemove="mudaFoto('_imagens/contato.png')"
+                        onmouseout="mudaFoto('./_imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">Fale
+                            conosco</a></li>
+                </ul>
+            </nav>
+
+        </header>
+
+        Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google
+        Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das
+        fotos para ver uma versão ampliada e com uma breve descrição.
+
+        - Agenda e lembretes
+        - Sergey Brin usando o Glass
+        - Leve e compacto
+        - Sensação de uma tela de 50"
+        - Vários tipos de lente
+        - Informações importantes
+
+        <footer id="rodape">
+            Copyright 2013 - by Gustavo Guanabara<br />
+            <a href="http://Facebook.com/cursosemvideo" target="_blank">Facebook</a> |
+            <a href="http://twitter.com/cursosemvideo" target="_blank">Twitter</a>
+        </footer>
+        <script src="./_javascript/funcoes.js"></script>
+</body>
+
+</html>
