--- a/specs.html
+++ b/specs.html
@@ -1,23 +1,98 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<html lang="pt-br">
 
-[AQUI ENTRA UMA FOTO]
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tudo Sobre o Google Glass</title>
+    <link rel="stylesheet" href="/_css/estilo.css">
+    <link rel="stylesheet" href="_css/specs.css">
+</head>
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+<body>
+    <div id="interface">
+        <header id="cabecalho">
+            <hgroup>
+                <h1>Google Glass</h1>
+                <h2>A revolução do Google está chegando</h2>
+            </hgroup>
 
-Glass > Especificações
-Raio-X no Google Glass
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+            <img id="icone" src="_imagens/especificacoes.png" alt="Óculos">
 
-Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
+            <nav class="navegacao">
+                <h1>Menu Principal </h1>
+                <ul>
+                    <li onmousemove="mudaFoto('./_imagens/home.png')"
+                        onmouseout="mudaFoto('./_imagens/glass-oculos-preto-peq.png')"><a href="index.html">Home</a>
+                    </li>
 
-[AQUI ENTRA UMA IMAGEM]
+                    <li onmousemove="mudaFoto('_imagens/especificacoes.png')"
+                        onmouseout="mudaFoto('./_imagens/especificacoes.png')"><a href="specs.html">Especificações</a>
+                    </li>
 
-Copyright 2013 - by Gustavo Guanabara<
-Facebook | Twitter
+                    <li onmousemove="mudaFoto('_imagens/fotos.png')"
+                        onmouseout="mudaFoto('./_imagens/especificacoes.png')"><a href="fotos.html">Fotos</a>
+                    </li>
+
+                    <li onmousemove="mudaFoto('_imagens/multimidia.png')"
+                        onmouseout="mudaFoto('./_imagens/especificacoes.png')"><a href="multimidia.html">Multimídia</a>
+                    </li>
+
+                    <li onmousemove="mudaFoto('_imagens/contato.png')"
+                        onmouseout="mudaFoto('./_imagens/especificacoes.png')"><a href="fale-conosco.html">Fale
+                            conosco</a></li>
+                </ul>
+            </nav>
+
+        </header>
+
+        <section id="corpo-full">
+            <article id="noticia-principal">
+                <header id="cabecalho-artigo">
+                    <h3>
+                        Glass > Especificações
+                    </h3>
+
+                    <h1>
+                        Raio-X no Google Glass
+                    </h1>
+
+                    <h3>
+                        por Gustavo Guanabara
+                    </h3>
+
+                    <h3 class="direita">
+                        Atualizado em 01/Maio/2013
+                    </h3>
+                </header>
+                <p>
+                    Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass.
+                    Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
+                </p>
+    
+                <section id="conteudo">
+                    <img src="./_imagens/glass-esquema-marcado.jpg" alt="Esquema do  Google Glass" usemap="#meu-mapa">
+                    <map name="meu-mapa">
+                        <area shape="poly" coords="184, 220, 266, 206, 267, 243, 185, 255" href="google-glass.html#tela" alt="Foto da tela." target="janela">
+
+                        <area shape="circle" coords="158, 244, 11.5" href="google-glass.html#camera" target="janela" alt="Foto da câmera">
+
+                        <area shape="circle" coords="76, 51, 12" href="google-glass.html#bateria" alt="Foto bateria" target="janela">
+
+                        <area shape="poly" coords="27, 145, 83, 215, 84, 252, 26, 169" href="google-glass.html#sensores" alt="Fotos dos sensores." target="janela">
+                    </map>
+                    <iframe scrolling='NO' src="google-glass.html" name="janela" id="frame-spec" ></iframe>
+                </section>
+            </article>
+
+        </section>
+
+        <footer id="rodape">
+            Copyright 2013 - by Gustavo Guanabara<br />
+            <a href="http://Facebook.com/cursosemvideo" target="_blank">Facebook</a> |
+            <a href="http://twitter.com/cursosemvideo" target="_blank">Twitter</a>
+        </footer>
+        <script src="./_javascript/funcoes.js"></script>
+</body>
+
+</html>
