--- a/fotos.html
+++ b/fotos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tudo Sobre o Google Glass</title>
     <link rel="stylesheet" href="/_css/estilo.css">
+    <link rel="stylesheet" href="_css/fotos.css">
 </head>
 
 <body>
@@ -29,8 +30,8 @@
                         onmouseout="mudaFoto('./_imagens/glass-oculos-preto-peq.png')"><a
                             href="specs.html">Especificações</a></li>
 
-                    <li onmousemove="mudaFoto('_imagens/fotos.png')"
-                        onmouseout="mudaFoto('./_imagens/glass-oculos-preto-peq.png')"><a href="fotos.html">Fotos</a>
+                    <li onmousemove="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('./_imagens/fotos.png')"><a
+                            href="fotos.html">Fotos</a>
                     </li>
 
                     <li onmousemove="mudaFoto('_imagens/multimidia.png')"
@@ -45,16 +46,22 @@
 
         </header>
 
-        Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google
-        Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das
-        fotos para ver uma versão ampliada e com uma breve descrição.
+        <p>
+            Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do
+            Google
+            Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma
+            das
+            fotos para ver uma versão ampliada e com uma breve descrição.
+        </p>
 
-        - Agenda e lembretes
-        - Sergey Brin usando o Glass
-        - Leve e compacto
-        - Sensação de uma tela de 50"
-        - Vários tipos de lente
-        - Informações importantes
+        <ul id="album-fotos">
+            <li id="foto01"><span>Agenda e lembretes</span></li>
+            <li id="foto02"><span>Sergey Brin usando o Glass</span></li>
+            <li id="foto03"><span>Leve e compacto</span></li>
+            <li id="foto04"><span>Sensação de uma tela de 50"</span></li>
+            <li id="foto05"><span>Vários tipos de lente</span></li>
+            <li id="foto06"><span>Informações importantes</span></li>
+        </ul>
 
         <footer id="rodape">
             Copyright 2013 - by Gustavo Guanabara<br />
