Finalizaçao da pagina principal e conclusao do album de fotos.

--- a/fotos.html
+++ b/fotos.html
@@ -68,6 +68,9 @@
             <a href="http://Facebook.com/cursosemvideo" target="_blank">Facebook</a> |
             <a href="http://twitter.com/cursosemvideo" target="_blank">Twitter</a>
         </footer>
+
+    </div>
+    
         <script src="./_javascript/funcoes.js"></script>
 </body>
 
