--- a/multimidia.html
+++ b/multimidia.html
@@ -34,8 +34,7 @@
                     </li>
 
                     <li onmousemove="mudaFoto('_imagens/multimidia.png')"
-                        onmouseout="mudaFoto('./_imagens/multimidia.png')"><a
-                            href="multimidia.html">Multimídia</a></li>
+                        onmouseout="mudaFoto('./_imagens/multimidia.png')"><a href="multimidia.html">Multimídia</a></li>
 
                     <li onmousemove="mudaFoto('_imagens/contato.png')"
                         onmouseout="mudaFoto('./_imagens/multimidia.png')"><a href="fale-conosco.html">Fale
@@ -45,18 +44,45 @@
 
         </header>
 
+        <section id="corpo-full">
+            <article id="noticia-principal">
+                <header id="cabecalho-artigo">
+                    <h3>
+                        Glass > Multimídia
+                    </h3>
 
-        Áudio e Vídeo
+                    <h1>
+                        Sons e Vídeos
+                    </h1>
 
-        [AQUI ENTRA UM VÍDEO]
-        [AQUI ENTRA UM ÁUDIO]
+                    <h3>
+                        por Gustavo Guanabara
+                    </h3>
+
+                    <h3 class="direita">
+                        Atualizado em 01/Maio/2013
+                    </h3>
+                </header>
+
+        <div id="tv-radio">
+            <audio id="musica" controls>
+                <source src="./_media/2009-lovers-carvings-bibio.mp3">
+                Seu navegador não suporta os elementos de audio, tente atualiza-lo!
+            </audio>
+            <video id="filme" controls poster="/_imagens/video-mini03.jpg">
+                <source src="./_media/getting-started.mp4"> 
+            </video>
+        </div>
 
         <footer id="rodape">
             Copyright 2013 - by Gustavo Guanabara<br />
             <a href="http://Facebook.com/cursosemvideo" target="_blank">Facebook</a> |
             <a href="http://twitter.com/cursosemvideo" target="_blank">Twitter</a>
         </footer>
-        <script src="./_javascript/funcoes.js"></script>
+
+    </div>
+
+    <script src="./_javascript/funcoes.js"></script>
 </body>
 
 </html>
