--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
                     clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.
                 </p>
     
-                [AQUI ENTRA UM VÍDEO]
+                <video controls poster="./_imagens/video-mini01.jpg">
+                    <source src="./_media/one-day.mp4"/>
+                </video>
             </article>
         </section>
 
@@ -127,7 +129,9 @@
             <h1>Outras Notícias</h1>
             <h2>Vídeo mais recente</h2>
 
-            [AQUI ENTRA UM VÍDEO]
+            <video poster="./_imagens/video-mini02.jpg" controls>
+                <source src="./_media/how-it-feels.mp4"/>
+            </video>
 
             <h2>Novidades no Glass</h2>
             <p>
